--- a/physicsProjectileApp.html
+++ b/physicsProjectileApp.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Physics Application</title>
-  <link rel="stylesheet" href="css/physicsProjectileApp.css">
+  <link rel="stylesheet" href="physicsProjectileApp.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     </p>
 	
 	<video controls>
-	 <source src="media/projectileVid.mp4" type="video/mp4">
+	 <source src="projectileVid.mp4" type="video/mp4">
 	 
 	</video>
 	
