--- a/index.html
+++ b/index.html
@@ -1,13 +1,91 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>My Page</title>
-</head>
-<body>
-  <h1>Hello World</h1>
+<html>
 
-  <!-- Link to external JavaScript file -->
-  <script src="script.js" defer></script>
+<head>
+  <title>Physics Application</title>
+  <link rel="stylesheet" href="css/physicsProjectileApp.css">
+</head>
+
+<body>
+  <div>
+  <h1>Projectiles</h1>
+  
+  <figure>
+   <img src="media/projectilePic.jpeg" alt="A Cannon Firing a Projectile" width="333" height="228">
+   <figcaption><strong>Fig. 1 - A Projectile Fired from a Cannon</strong></figcaption>
+  </figure>
+
+  <p>In 1600s, armies used equations of motions to calculate
+    velocities and angle for firing a missile to hit
+    a target. While a quarterback does not do explicit
+    calculations using equations of motion, a computerized
+    football game will certainly need to do these calculations.
+    </p>
+	
+	<video controls>
+	 <source src="media/projectileVid.mp4" type="video/mp4">
+	 
+	</video>
+	
+	<br> We will use the metric notations that are favored
+    for all scientific and engineering calculations
+    <br>
+    <br> The following abbreviations will be used:
+  </p>
+  <h2>Abbreviations</h2>
+  <ul>
+   <li>meters, <em>m</em>
+   </li>
+  <li> kilometers, <em>km</em>: 1000 meters make up a kilometer</li>
+  <li> meters per second, m/s: units for measuring distance</li>
+  <li> meters per second squared, <em>m/s
+  <sup>2</sup></em>: units for measuring acceleration
+  </li>
+  </ul>
+  <h2>Notations</h2>
+  
+  <table border="1">
+  <tr>
+   <th>abbreviation</th>
+   <th>Meaning</th>
+  </tr>
+  <tr>
+   <td><em>u</em></td>
+   <td>Initial velocity</td>
+  </tr>
+  <tr>
+   <td><em>v</em></td>
+   <td>Final velocity</td>
+  </tr>
+  <tr>
+   <td><em>a</em></td>
+   <td>Acceleration</td>
+  </tr>
+  <tr>
+   <td><em>t</em></td>
+   <td>Time</td>
+  </tr>
+  <tr>
+   <td><em>s</em></td>
+   <td>Distance</td>
+  </tr>
+  </table>
+  
+  <h2>Equations</h2>
+  <ol>
+   <li>a = (v - u) / t, which can be arranged to get the following
+  equation
+   </li>
+   <li>t = (v - u) / a, which can be further arranged as
+   </li>
+   <li>v = u + a * t
+   </li>
+   <li>s = u * t + 0.5 * a * t<sup>2</sup>, another useful
+  equation of motion
+   </li>
+  </ol>
+  </div>
+
 </body>
+
 </html>
