--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Projectiles</h1>
   
   <figure>
-   <img src="projectilePic.jpeg" alt="A Cannon Firing a Projectile" width="333" height="228">
+   <img src="my-website/projectilePic.jpeg" alt="A Cannon Firing a Projectile" width="333" height="228">
    <figcaption><strong>Fig. 1 - A Projectile Fired from a Cannon</strong></figcaption>
   </figure>
 
