--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </p>
 	
 	<video controls>
-	 <source src="media/projectileVid.mp4" type="video/mp4">
+	 <source src="main/projectileVid.mp4" type="video/mp4">
 	 
 	</video>
 	
