--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Physics Application</title>
-  <link rel="stylesheet" href="css/physicsProjectileApp.css">
+  <link rel="stylesheet" href="main/physicsProjectileApp.css">
 </head>
 
 <body>
@@ -11,7 +11,7 @@
   <h1>Projectiles</h1>
   
   <figure>
-   <img src="projectilePic.jpeg" alt="A Cannon Firing a Projectile" width="333" height="228">
+   <img src="main/projectilePic.jpeg" alt="A Cannon Firing a Projectile" width="333" height="228">
    <figcaption><strong>Fig. 1 - A Projectile Fired from a Cannon</strong></figcaption>
   </figure>
 
