--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Physics Application</title>
-  <link rel="stylesheet" href="main/physicsProjectileApp.css">
+  <link rel="stylesheet" href="physicsProjectileApp.css">
 </head>
 
 <body>
@@ -11,7 +11,7 @@
   <h1>Projectiles</h1>
   
   <figure>
-   <img src="main/projectilePic.jpeg" alt="A Cannon Firing a Projectile" width="333" height="228">
+   <img src="projectilePic.jpeg" alt="A Cannon Firing a Projectile" width="333" height="228">
    <figcaption><strong>Fig. 1 - A Projectile Fired from a Cannon</strong></figcaption>
   </figure>
 
@@ -23,7 +23,7 @@
     </p>
 	
 	<video controls>
-	 <source src="main/projectileVid.mp4" type="video/mp4">
+	 <source src="projectileVid.mp4" type="video/mp4">
 	 
 	</video>
 	
