--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </p>
 	
 	<video controls>
-	 <source src="projectileVid.mp4" type="video/mp4">
+	 <source src="projectileVid.mp4" type="video/mp4" width="333" height="228">
 	 
 	</video>
 	
