--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
     football game will certainly need to do these calculations.
     </p>
 	
-	<video controls>
-	 <source src="projectileVid.mp4" type="video/mp4" width="333" height="228">
-	 
-	</video>
+	<video controls width="333" height="228">
+           <source src="projectileVid.mp4" type="video/mp4">
+        </video>
 	
 	<br> We will use the metric notations that are favored
     for all scientific and engineering calculations
