--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <head>
   <title>Physics Simulator App</title>
-  <link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css">
-  <script src="scripts/jquery-1.8.3.min.js">
+  <link rel="stylesheet" href="jquery.mobile-1.3.1.min.css">
+  <script src="jquery-1.8.3.min.js">
   </script>
-  <script src="scripts/chromeFileProtocolFix.js"></script>
-  <script src="scripts/jquery.mobile-1.3.1.min.js">
+  <script src="chromeFileProtocolFix.js"></script>
+  <script src="jquery.mobile-1.3.1.min.js">
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
